# reachy_mini

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_COMPARISON.md  BETA_CONTRIBUTION_README.md  CHANGELOG.md  CHOREOGRAPHY_BUILDER_README.md  CHOREOGRAPHY_README.md  CLAUDE.md  CONTROL_CENTER_README.md  CONVERSATION_TRIMMING_GUIDE.md  Claude Code explanation of implementing while loop.rtf  DEVELOPMENT.md  EXTENSION_MANIFEST_EXAMPLE.json  MOBILE_DEPLOYMENT.md  MOVEMENT_ARBITER_IMPLEMENTATION.md  MOVEMENT_PLUGIN_EXPANDED.md  MUJOCO_SCENE_GUIDE.md  README.md  RELEASE.md  Reachy_iOS_app_concept.rtf  SIMULATOR_ARCHITECTURE.md  UNIFIED_CONTROL_CENTER_ANALYSIS.md  agents.local.md.template  agents.md  allurerc.mjs  assets  aze.py  choreography_player.py  conftest.py  context.md  control_center.py  control_center_requirements.txt  desktop_viewer.py  desktop_viewer.py.bak  example.py  generate_floor_texture.py  (+32 more)
apps/dashboard/: __init__.py  app_install.py  dashboard_api.py  pyproject.toml  utils.py  venv_app.py
apps/dashboard/reachy_mini_dashboard/: app_install.py  dashboard_api.py  utils.py
apps/dashboard/reachy_mini_dashboard/assets/css/: style.css
apps/dashboard/reachy_mini_dashboard/assets/js/: daemon.js  script.js  space_store.js
apps/dashboard/reachy_mini_dashboard/assets/templates/: index.html
apps/dashboard/reachy_mini_dashboard/templates/: index.html
apps/dashboard/templates/: index.html
apps/hello_app/: pyproject.toml
apps/hello_app/hello_app/: main.py
benchmarks/: ITERATIONS.md  RESULTS.md  baseline.json  bench_startup.py  opt_a.json  opt_b.json  test_cm4.sh
choreography/: README.md  __init__.py  audio_analyzer.py  context_builder.py  inspect_essentia_raw.py  move_metadata.json  move_metadata.py  move_metadata_cache.py  react_agent.py  react_choreographer.py  react_tools.py  segment_analyzer.py
core/: daemon_client.py  extension_manager.py  state_manager.py  ui_builder.py
coverage/: class_index.html  function_index.html  index.html  status.json  z_072a913132ec7007___init___py.html  z_072a913132ec7007_startup_check_py.html  z_072a913132ec7007_update_available_py.html  z_072a913132ec7007_update_py.html  z_072a913132ec7007_utils_py.html  z_0aca330d7e5545ab___init___py.html  z_0aca330d7e5545ab_analytical_kinematics_py.html  z_0aca330d7e5545ab_nn_kinematics_py.html  z_0aca330d7e5545ab_placo_kinematics_py.html  z_0db7c6a890609eed___init___py.html  z_0db7c6a890609eed_daemon_py.html  z_0db7c6a890609eed_jsonrpc_relay_py.html  z_0db7c6a890609eed_robot_app_lock_py.html  z_0db7c6a890609eed_startup_app_config_py.html  z_0db7c6a890609eed_utils_py.html  z_128360123debeb49___init___py.html  z_128360123debeb49_backend_py.html  z_194088a42eda6bdc___init___py.html  z_194088a42eda6bdc_abstract_py.html  z_194088a42eda6bdc_jsonrpc_py.html  z_194088a42eda6bdc_protocol_py.html  z_194088a42eda6bdc_publisher_py.html  z_194088a42eda6bdc_ws_client_py.html  z_194088a42eda6bdc_ws_server_py.html  z_1b9aa9667b7e80fd___init___py.html  z_1b9aa9667b7e80fd_goto_py.html  z_1b9aa9667b7e80fd_head_wobbler_py.html  z_1b9aa9667b7e80fd_move_py.html  z_1b9aa9667b7e80fd_recorded_move_py.html  z_1b9aa9667b7e80fd_speech_tapper_py.html  z_2dee820ef77f61f5___init___py.html  z_2dee820ef77f61f5_constants_py.html  z_2dee820ef77f61f5_discovery_py.html  z_2dee820ef77f61f5_hardware_id_py.html  z_2dee820ef77f61f5_interpolation_py.html  z_2dee820ef77f61f5_parse_urdf_for_kinematics_py.html  (+81 more)
dashboard/: pyproject.toml
dashboard/reachy_mini_dashboard/: dashboard_api.py
docs/: API.md  HELP.md  HELP_CALIBRATION.md  HELP_COMMON_ERRORS.md  HELP_CONTROL_MODES.md  HELP_DEVELOPMENT_WORKFLOW.md  HELP_FIRST_MOTION.md  HELP_HARDWARE.md  HELP_SAFETY.md  HELP_SOFTWARE_SETUP.md  HELP_WHEN_THINGS_GO_WRONG.md  README.md  RPI.md  SIGNALING.md  contributing.md  doc_reachy_mini_full.md  embedded-app-ui-guide.md  generate.md  known_issues.md  motion_hooks_plugin_guide.md  python-sdk.md  rest-api.md  rollback-checkpoint-2026-05-20.md  troubleshooting.md  wireless-version.md
examples/: README.md  analytical_ik_example.py  api_playground.py  basic_mujoco_example.py  brute_force.py  camera_viewer.py  central_consumer_cloud_backend.py  chord_machine.py  client_example.py  custom_media_manager.py  dance_demo.py  dance_moves.py  dance_party.json  dance_tester.py  detect_aruco.py  emotional_journey.json  energetic_performance.json  gladiator.py  gladiator2.py  gladiator3.py  goto_interpolation_playground.py  groove.py  groove_test.py  hand_track_demo.py  hand_tracker.py  head_track_demo.py  head_track_demo_rerun.py  head_tracker.py  head_tracking.py  ik_example.py  imu_example.py  joint_space_test.py  joy_controller.py  led.py  live_aubio.py  live_groove.py  live_mic_wobble.py  look_at_image.py  lookat_example.py  lookat_head_track_demo.py  (+52 more)
extension_manifests/: MANIFEST_GUIDE.md  choreography_builder_manifest.json  conversation_app_manifest.json  dance_dance_reachy_manifest.json  move_controller_manifest.json
head_mass_torque_test/: README.md  analyze_real_robot_data.py  check_head_torques.py  check_payload_torques.py  launch_mujoco_viewer.py  regenerate_summary.py  stress_test_payload.py  test_real_robot_poses.py  track_motion_torques.py  track_motion_torques_sim.py
history/: history.jsonl
js/: AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json  reachy-mini-sdk.d.ts  reachy-mini-sdk.js  reachy-mini.js
minimal_jeremy/: joint_space_test.py
scripts/: clean-faq-blocks.py  clean_faq_blocks.py  clean_troubleshooting_blocks.py  faq_utils.py  generate_faq.py  generate_openapi.py  generate_troubleshooting.py  inject_faq_tags.py  inject_troubleshooting_tags.py  qa_utils.py
skills/: ai-integration.md  control-loops.md  create-app.md  create-js-app.md  debugging.md  deep-dive-docs.md  interaction-patterns.md  motion-philosophy.md  rest-api.md  safe-torque.md  setup-environment.md  symbolic-motion.md  testing-apps.md
static/: style.css
tests/: first_load_bench.py  test_analytic_kinematics.py  test_app.py  test_audio.py  test_audio_methods.py  test_cmd.py  (+12 more)
(+1361 files in other folders)
