[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini"
version = "1.2.13"
authors = [{ name = "Pollen Robotics", email = "contact@pollen-robotics.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15.3, <2.0.0",
    "reachy_mini_motor_controller>=1.5.3",
    "eclipse-zenoh~=1.7.0",
    "opencv-python<=5.0",
    "cv2_enumerate_cameras>=1.2.1",
    "psutil",
    "jinja2",
    "uvicorn[standard]",
    "fastapi",
    "pyserial",
    "huggingface-hub==1.3.0",
    "reachy-mini-rust-kinematics>=1.0.3",
    "asgiref",
    "aiohttp",
    "log-throttling==0.0.3",
    "pyusb>=1.2.1",
    "libusb_package>=1.0.26.3",
    "pip>=25",
    "rich",
    "questionary",
    "websockets>=12,<16",
    "toml",
    "rustypot>=1.4.2",
    "pyyaml>=6.0",
    "requests>=2.28.0",


    ## Pick meta package from the gitlab registry for now: https://github.com/pypi/support/issues/8847
    "gstreamer @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/d59054109d4dacf3562242c5ff7e66f9485613777f32d023f61c7b5f544fd16d/gstreamer-1.27.90-py3-none-any.whl ; (sys_platform == \"win32\" or sys_platform == \"darwin\")",

    ## Temporarily work around broken pypi metadata: https://github.com/pypi/warehouse/issues/18482#issuecomment-3164270257
    # Windows
    "gstreamer_cli @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/3f01227e2d34ace833f5fd712e6ca0a3f384dba33804c8576ed4f70d31cc8186/gstreamer_cli-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_runtime @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/c46cd36ce41266b1c9896e12c41087303dbba62002dedde54dde800d67d00cc5/gstreamer_runtime-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_plugins_runtime @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/f37f89c14dae3b44f910d841f93e2bafca67810b5a34d324bc7c4d790f457814/gstreamer_plugins_runtime-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_plugins_restricted @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/8e91d6027edaa966be131140b8e466b714df7008e11ad4998fd11ea9ec41aa0e/gstreamer_plugins_restricted-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_plugins_gpl @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/02018070cd7c735be3d5eb197f0165722f9c75214af4e803ff2a3dd1e36c8876/gstreamer_plugins_gpl-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_plugins_gpl_restricted @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/d4dc71430c7221b9d3e71bfb4d2863aaddad63d0e169918d82e61364ec62849c/gstreamer_plugins_gpl_restricted-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_plugins @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/4fb18547164b6e2f94848690552485c172e17aac91a60267bc961eac54e00521/gstreamer_plugins-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_msvc_runtime @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/a197660657fe423ef6f43cc6a9d155c3e9e449279b79778b70378d60b60b9011/gstreamer_msvc_runtime-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    "gstreamer_gtk @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/09121ed36e7f8dfb73b22ad6c3a4da35b3669d23cd3a3d58232ffa34f8062030/gstreamer_gtk-1.27.90-cp39-abi3-win_amd64.whl ; (sys_platform == \"win32\")",
    # macOS
    "gstreamer_cli @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/f40e05e0df2691900386dbe68fc150273fc6813a1af02baafce68675b452501d/gstreamer_cli-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_runtime @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/3b90564ee2517637690c30910cc267abc3edf3a9316274024504f5365b9b26a3/gstreamer_runtime-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_plugins_runtime @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/e0d3774208108570f3fd283aeee913d6a3d85b5aab28be7b2d1229d33096b069/gstreamer_plugins_runtime-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_plugins_restricted @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/36fb1d58016e335ca2178d520fcd096f6d9a3a792b3a587390cd65abffbc9e5d/gstreamer_plugins_restricted-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_plugins_gpl @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/9c5fe8d199adfcd1ca57d7b985ebb92e785a91a4583f29274b6bb44636e21581/gstreamer_plugins_gpl-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_plugins_gpl_restricted @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/f57457c01fb828df993816798f96fd650a47cb42b287c8c0bd82f7f353293eb7/gstreamer_plugins_gpl_restricted-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_plugins @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/5a5da63fb8aab6754fb3a5ea0050c7903628215ef6b8aa7ada61d48402cb29a4/gstreamer_plugins-1.27.90-cp39-abi3-macosx_10_13_universal2.whl ; (sys_platform == \"darwin\")",
    "gstreamer_gtk @ https://gitlab.freedesktop.org/api/v4/projects/1340/packages/pypi/files/fb53ea70c92c523f711babdfda8ee797657924105a6e593653599c0b0539839e/gstreamer_gtk-1.27.90-cp39-abi3-macosx_10_15_universal2.whl ; (sys_platform == \"darwin\")",

    # OS-specific: use PyGObject for Linux
    "PyGObject>=3.42.2,<=3.46.0; sys_platform == 'linux'",
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff==0.12.0",
    "onshape-to-robot==1.7.6",
    "pre-commit",
    "mypy==1.18.2",
    "types-requests",
    "types-toml",
]
examples = ["pynput", "soundfile"]
mujoco = ["mujoco==3.3.0"]
nn_kinematics = ["onnxruntime==1.22.1"]
placo_kinematics = ["placo==0.9.14"]
rerun = ["rerun-sdk>=0.27.2", "urdf-parser-py==0.0.4"]
wireless-version = [
    "semver>=3,<4",
    "nmcli>=1.5",
    "pollen_BMI088_imu_library",
    "gpiozero>=2.0.0",
    "lgpio>=0.2.2.0",
]
sounddevice = ["sounddevice==0.5.1", "soundfile"]
opencv = ["opencv-python<=5.0", "cv2_enumerate_cameras>=1.2.1"]
dev_media = ["reachy_mini[dev,sounddevice,opencv]"]

[project.scripts]
reachy-mini-daemon = "reachy_mini.daemon.app.main:main"
reachy-mini-app-assistant = "reachy_mini.apps.app:main"
reachy-mini-reflash-motors = "reachy_mini.tools.reflash_motors:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
reachy_mini = ["**/*"] # Inclut tous les fichiers non .py

[tool.ruff]
exclude = [
    "src/reachy_mini/__init__.py",
    "build/*",
    "conftest.py",
    "src/reachy_mini_dashboard/*",
    "tests/*",
]
lint.extend-select = ["I", "D"]
lint.ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "audio: mark test as requiring audio hardware",
    "audio_sounddevice: mark test as requiring Sounddevice for audio",
    "video: mark test as requiring video hardware",
    "video_opencv: mark test as requiring OpenCV for video",
    "wireless: mark test as requiring wireless Reachy Mini",
]

[tool.mypy]
python_version = "3.10"
files = ["src/"]
ignore_missing_imports = true
strict = true
