[metadata]
name = stewart_little_control
version = 0.1.0
author = Antoine Pirrone
author_email = antoine.pirrone@pollen-robotics.com
description =
long_description = file: README.md
long_description_content_type = text/markdown


[options]
package_dir =
    = src
packages = find:
install_requires =
    pypot @ git+https://github.com/apirrone/pypot@support_4B_registers
    numpy==2.2.5
    scipy==1.15.3
    mujoco==3.3.0
    onshape-to-robot
    placo
    reachy_mini_motor_controller


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mujoco-server = stewart_little_control.mujoco_server:main
    robot-server = stewart_little_control.robot_server:main
