[metadata]
name = reachy_mini
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
description =
long_description = file: README.md
long_description_content_type = text/markdown


[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy==2.2.5
    scipy==1.15.3
    mujoco==3.3.0
    onshape-to-robot==1.7.5
    placo==0.9.0
    reachy_mini_motor_controller
    simpleaudio==1.0.4
    eclipse-zenoh>=1.4.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mujoco-server = reachy_mini.mujoco_server:main
