[metadata]
name = reachy_mini
version = 0.1.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
description =
long_description = file: README.md
long_description_content_type = text/markdown


[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy==2.2.5
    scipy==1.15.3
    mujoco==3.3.0
    onshape-to-robot==1.7.5
    placo==0.9.4
    reachy_mini_motor_controller
    pygame==2.6.1
    eclipse-zenoh>=1.4.0
    opencv-python<=5.0
    psutil
    jinja2


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    reachy-mini-daemon = reachy_mini.io.daemon:main
    reachy-mini-make-app = reachy_mini.app:main
