[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "hello_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["reachy-mini"]

[project.entry-points."reachy_mini_apps"]
hello_app = "hello_app.main:HelloApp"
